<package>
  <name>biped2_gazebo</name>
  <version>0.0.0</version>
  <description>biped2_gazebo</description>
  <maintainer email="tclamai@connect.ust.hk">Tsz Chun Lam</maintainer>

  <license>BSD</license>

  <author email="tclamai@connect.ust.hk">Tsz Chun Lam</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>biped_description</run_depend>

  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
